# spade

./: .gitignore  AGENT.md  CMakeLists.txt  README.md  TODO.md  edge_test_identifiers.sp  edge_test_invalid.sp  edge_test_numbers.sp  edge_test_operators.sp  edge_test_strings.sp  edge_test_whitespace.sp  grammar_rules.txt  spade.c  spade.ir.c  spade.ir.h  spade.lexer.c  spade.lexer.h  spade.parser.c  spade.parser.h  spade.semantic.c  spade.semantic.h  spade.sp  spade.symbol.c  spade.symbol.h  spade.vm.c  spade.vm.h
improvements/: string_literal_implementation.md
test_scripts/function/: basic_function.sp  debug_test.sp  error_test.sp  function_call_test.sp  function_declaration_test.sp  mixed_test.sp  simple_call.sp  simple_function.sp  test_empty_params.sp  test_with_params.sp  type_error_test.sp  undeclared_test.sp
test_scripts/ir_tests/: arithmetic.sp  comparison.sp  comparison_comp.sp  power.sp
test_scripts/semantic_errors/: arithmetic_type_error.sp  comparison_type_error.sp  logical_type_error.sp  mixed_type_test.sp  undeclared_variable.sp
test_scripts/variable_declaration/: comments.sp  declaration.sp  expression.sp  mixed_operations.sp  multiple.sp  string.sp  string_concat.sp  string_concat_basic.sp  string_concat_edge_cases.sp  string_concat_mixed.sp  string_concat_multiple.sp  test_variable_addition.sp
test_scripts/vm_test/: duplicate_var_test.sp  interleaved_updates.sp  multiple_reassignment.sp  multiple_variables_update.sp
